logic for game setup

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button id="saveSettings">Spara</button>
         </div>
 
-        <form id="playerDetails" action="post">
+        <form id="playerDetails" class="player-details" action="post">
 
         </form>
         <div class="btn-container hidden" id="btnContainer">
@@ -52,7 +52,8 @@
         <h2 class="current-player" id="currentPlayerName"></h2>
         <p class="time-left" id="timeLeft"></p>
         <div class="btn-container" id="btnContainer">
-            <button id="nextPlayer" class="btn-next">Nästa spelare</button>
+            <button id="reset" class="btn-reset">Återställ</button>
+            <button id="exit" class="btn-exit">Avsluta</button>
         </div>
     </div>
     <script src="scripts/main.js">
